experimental/internal/lexer/testdata/strings/bad-escape.proto.stderr.txt
error: invalid escape sequence
  --> testdata/strings/bad-escape.proto:1:2
   |
 1 | "\k" "\x" "\9" "\u", "\U"
   |  ^^

error: invalid escape sequence
  --> testdata/strings/bad-escape.proto:1:7
   |
 1 | "\k" "\x" "\9" "\u", "\U"
   |       ^^ `\x` must be followed by at least one hex digit

error: invalid escape sequence
  --> testdata/strings/bad-escape.proto:1:12
   |
 1 | "\k" "\x" "\9" "\u", "\U"
   |            ^^

error: invalid escape sequence
  --> testdata/strings/bad-escape.proto:1:17
   |
 1 | "\k" "\x" "\9" "\u", "\U"
   |                 ^^ `\u` must be followed by exactly 4 hex digits

error: invalid escape sequence
  --> testdata/strings/bad-escape.proto:1:23
   |
 1 | "\k" "\x" "\9" "\u", "\U"
   |                       ^^ `\U` must be followed by exactly 8 hex digits

error: invalid escape sequence
  --> testdata/strings/bad-escape.proto:2:2
   |
 2 | "\u000" "\U0000000"
   |  ^^^^^ `\u` must be followed by exactly 4 hex digits

error: invalid escape sequence
  --> testdata/strings/bad-escape.proto:2:10
   |
 2 | "\u000" "\U0000000"
   |          ^^^^^^^^^ `\U` must be followed by exactly 8 hex digits

encountered 7 errors
